[package]
name = "ixa-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "^0.3.77", features = ["Window", "Performance"] }
js-sys = "^0.3.77"

ixa = { git = "https://github.com/CDCgov/ixa.git", branch = "RobertJacobsonCDC_369_wasm_build", features = ["logging"] }
#ixa = { path = "../ixa", features = ["logging"] }
rand_distr = "^0.4.3"
serde = { version = "^1.0.217", features = ["derive"] }
